...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Messages" id="CQv-Ld-E6L"/>
                    <connections>
                        <outlet property="converstationTable" destination="yPp-W9-94i" id="Sbb-NP-NMn"/>
...
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" red="0.96055269241333008" green="0.96052390336990356" blue="0.96054017543792725" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ChatEditedTableViewCell"/>
                                        <connections>
                                            <outlet property="leftPicture" destination="pzy-rh-QT1" id="fSR-8C-3MR"/>
...
                            <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E7n-91-J2A" customClass="AccessoryView" customModule="HiLingual" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="550" width="600" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="InputView"/>
                            </view>
                        </subviews>
...
                    </view>
                    <navigationItem key="navigationItem" id="ktS-gQ-9LD" userLabel="ChatViewControllerNavigationBar">
                        <barButtonItem key="rightBarButtonItem" title="Details" id="FPQ-fb-3tr">
                            <connections>
                                <action selector="details:" destination="nBC-Zq-2jE" id="XvD-Fw-3UK"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Au8-DZ-63Z" customClass="ProfileView" customModule="HiLingual" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qRK-tG-nLo" customClass="EditProfileView" customModule="HiLingual" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                            <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <accessibility key="accessibilityConfiguration" identifier="LanguageTitleLabel"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                                    </subviews>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" identifier="LanguageCell"/>
                            </tableViewCell>
                        </prototypes>
...
                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" identifier="EditProfile"/>
                            </view>
                        </subviews>
...
                    </view>
                    <navigationItem key="navigationItem" id="BgE-VS-eTi">
                        <barButtonItem key="leftBarButtonItem" title="Settings" id="a9S-Er-P21">
                            <connections>
                                <action selector="showSettings:" destination="Q1f-p8-L4k" id="igN-53-VWE"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="pHn-AO-3os">
                            <connections>
                                <action selector="tapEdit:" destination="Q1f-p8-L4k" id="RRc-eO-XdD"/>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="FAi-Zl-ei5" customClass="SettingsCell" customModule="HiLingual" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="92" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WAo-sR-7Fu">
                                                    <rect key="frame" x="543" y="7" width="51" height="31"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="SettingSwitch"/>
                                                    <connections>
                                                        <action selector="switchChanged:" destination="FAi-Zl-ei5" eventType="valueChanged" id="A43-Sy-b5s"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="Z5f-4H-Weu">
                            <connections>
                                <action selector="pressedDone:" destination="Pji-NK-j4l" id="FZt-Ou-rT6"/>
...
                                <rect key="frame" x="0.0" y="72" width="600" height="479"/>
                                <color key="backgroundColor" red="0.019607843140000001" green="0.40000000000000002" blue="0.55294117649999996" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Carousel"/>
                                <connections>
                                    <outlet property="dataSource" destination="EA8-An-G2I" id="QCN-rB-Pd7"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Matching" id="Afi-Gr-tu1"/>
                    <connections>
                        <outlet property="carousel" destination="aVZ-WE-2Oy" id="2tj-Qr-dI6"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2in-sX-LFU" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profile" id="ndt-1q-acR"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cRd-of-hUa">
...
