...
        <view contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speaks:" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Fl-0e-YAL">
                    <rect key="frame" x="8" y="191" width="359" height="20.5"/>
                    <accessibility key="accessibilityConfiguration" identifier="SpeaksLabel"/>
                    <gestureRecognizers/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                    <connections>
                        <outletCollection property="gestureRecognizers" destination="5xf-sL-gMJ" appends="YES" id="528-LU-Qx2"/>
                    </connections>
                </label>
                <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Learning:" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCJ-CG-M0J">
                    <rect key="frame" x="8" y="220" width="359" height="20.5"/>
                    <accessibility key="accessibilityConfiguration" identifier="LearningLabel"/>
                    <gestureRecognizers/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                    <connections>
                        <outletCollection property="gestureRecognizers" destination="6OE-2I-EBj" appends="YES" id="0bC-Zy-1f6"/>
                    </connections>
                </label>
                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="749" text="Bio text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VCT-Qw-TZ1">
                    <rect key="frame" x="0.0" y="277" width="375" height="389.5"/>
                    <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                    <accessibility key="accessibilityConfiguration" identifier="BioTextView"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                    <connections>
                        <outlet property="delegate" destination="-1" id="P82-Ob-myj"/>
                    </connections>
                </textView>
...
                            </connections>
                        </barButtonItem>
                    </items>
                </toolbar>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bio:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMO-ri-N1e">
                    <rect key="frame" x="8" y="248" width="359" height="20.5"/>
                    <accessibility key="accessibilityConfiguration" identifier="BioLabel"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="0Lt-LS-xOJ">
                    <rect key="frame" x="8" y="8" width="359" height="175.5"/>
...
                                    <rect key="frame" x="0.0" y="0.0" width="45" height="20.5"/>
                                    <accessibility key="accessibilityConfiguration" identifier="NameLabel"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKJ-ua-Xsy">
                                    <rect key="frame" x="0.0" y="28" width="110" height="20.5"/>
                                    <accessibility key="accessibilityConfiguration" identifier="DisplayNameLabel"/>
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
...
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                        </label>
                                        <label opaque="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Gender" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EP1-OT-Q5T">
                                            <rect key="frame" x="66" y="0.0" width="109.5" height="20.5"/>
                                            <accessibility key="accessibilityConfiguration" identifier="GenderSelectionLabel"/>
                                            <gestureRecognizers/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                            <nil key="highlightedColor"/>
                                            <connections>
                                                <outletCollection property="gestureRecognizers" destination="7xG-BG-M2c" appends="YES" id="RmO-Ud-eZo"/>
...
