...
        <view opaque="NO" contentMode="scaleToFill" id="iN0-l3-epB">
            <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3b4-LC-oRi">
                    <rect key="frame" x="8" y="8" width="34" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="LeftButton"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="34" id="AQW-oU-Vat"/>
                        <constraint firstAttribute="width" constant="34" id="hY6-HZ-Szo"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="FontAwesome" family="FontAwesome" pointSize="28"/>
                    <state key="normal">
...
                    <connections>
                        <action selector="tapCameraDown:" destination="-1" eventType="touchDown" id="bIL-jP-rjZ"/>
                    </connections>
                </button>
                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m9k-mK-rME">
                    <rect key="frame" x="205" y="8" width="34" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="DeleteRecordingButton"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="34" id="eVd-mU-70I"/>
                        <constraint firstAttribute="width" constant="34" id="t58-rc-wGg"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="FontAwesome" family="FontAwesome" pointSize="34"/>
                    <state key="normal">
...
                    <connections>
                        <action selector="tapDelete:" destination="-1" eventType="touchUpInside" id="YBv-Js-Oam"/>
                    </connections>
                </button>
                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="obr-DO-y8s">
                    <rect key="frame" x="361" y="8" width="34" height="34"/>
                    <accessibility key="accessibilityConfiguration" identifier="PreviewRecordingButton"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="34" id="9Ot-LY-Cth"/>
                        <constraint firstAttribute="height" constant="34" id="q5Y-47-cTi"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="FontAwesome" family="FontAwesome" pointSize="34"/>
                    <state key="normal">
...
                    <connections>
                        <outlet property="delegate" destination="-1" id="9BE-sL-Luu"/>
                    </connections>
                </textView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PVk-FS-d4h">
                    <rect key="frame" x="550" y="12" width="46" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="SendButton"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="46" id="YsJ-LI-jGz"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                    <color key="tintColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                    <state key="normal" title="Send">
...
