...
    }

    func didBegingEditing() {
        isEditing = true

        leftButton.setImage(UIImage(named: "shittyx"), for: UIControlState())
        sendButton.setTitle("Save".localized, for: UIControlState())

        textViewDidChange(textView)
    }

    func didEndEditing() {
        isEditing = false
...
        }

        textView.resignFirstResponder()
        // NOW PICTURE BUTTON TAP
        let imagePickerController = UIImagePickerController()
        let alertController = UIAlertController(title: nil, message: "Choose Source".localized, preferredStyle: .actionSheet)
        let cancelAction = UIAlertAction(title: "Cancel".localized, style: .cancel) { (action) in
            return
        }
        alertController.addAction(cancelAction)

        let takePictureAction = UIAlertAction(title: "Take Picture".localized, style: .default) { (action) in
            imagePickerController.sourceType = .camera
            imagePickerController.delegate = self

            var topVC = UIApplication.shared.keyWindow?.rootViewController
            while((topVC!.presentedViewController) != nil) {
                topVC = topVC!.presentedViewController
...
