//
//  HiLingualUITests.swift
//  HiLingualUITests
//
//  Created by Garrett Davidson on 1/28/16.
//  Copyright © 2016 Team3. All rights reserved.
//

import XCTest

class HiLingualUITests: XCTestCase {

    override func setUp() {
        super.setUp()

        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }

    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()

        let hilingualProfileviewNavigationBar = app.navigationBars["HiLingual.ProfileView"]
        hilingualProfileviewNavigationBar.buttons["Edit"].tap()

        let displayNameTextField = app.textFields["Display Name"]
        displayNameTextField.tap()
        displayNameTextField.typeText("hi")

        hilingualProfileviewNavigationBar.buttons["Done"].tap()

    }
    func testEditBio() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()

        let hilingualProfileviewNavigationBar = app.navigationBars["HiLingual.ProfileView"]
        hilingualProfileviewNavigationBar.buttons["Edit"].tap()

        let textView = app.children(matching: .window).element(boundBy: 0).children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element.children(matching: .other).element(boundBy: 2).children(matching: .other).element.children(matching: .textView).element
        textView.tap()
        textView.typeText("This Test better work!!!!!!!!jjjjjjjjsdfkjghsdfgjrxyctfuvygbuhnijhugyvftcdrcfvgybhunoubgyuftycdrcytfvgybuhbgyvftcdrtfvgybuhygvuftcydrctfvygbuh")

        hilingualProfileviewNavigationBar.buttons["Done"].tap()

    }
    func testDisplayName() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()

        let hilingualProfileviewNavigationBar = app.navigationBars["HiLingual.ProfileView"]
        hilingualProfileviewNavigationBar.buttons["Edit"].tap()

        let displayNameTextField = app.textFields["Display Name"]
        displayNameTextField.tap()
        displayNameTextField.typeText("NOah")

        hilingualProfileviewNavigationBar.buttons["Done"].tap()

    }
    func testTextViewHeight() {

        let app = XCUIApplication()
        sleep(1)
        app.tables.cells.element(boundBy: 0).tap()

        let element = app.children(matching: .window).element(boundBy: 1).children(matching: .other).element.children(matching: .other).element
        element.children(matching: .other).element.children(matching: .other).element.children(matching: .textView).element.tap()
        element.children(matching: .other).element(boundBy: 0).children(matching: .other).element.children(matching: .textView).element.tap()
        app.menuItems["Paste"].tap()

        let sendButton = app.buttons["SendButton"]
        sendButton.tap()
        sendButton.tap()
//     XCTAssert(textView.frame.size.height < 110)

    }

    //Test bio
    func testEditNameNoCrash() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()

        let hilingualProfileviewNavigationBar = app.navigationBars["HiLingual.ProfileView"]
        hilingualProfileviewNavigationBar.buttons["Edit"].tap()

        let displayNameTextField = app.textFields["Display Name"]
        displayNameTextField.tap()
        app.typeText(" oldName")
        displayNameTextField.tap()
        displayNameTextField.press(forDuration: 1.7)

        app.menuItems["Select All"].tap()

        let deleteKey = app.keys["delete"]
        deleteKey.tap()

        app.typeText("name")

        app.textFields["Display Name"]
        hilingualProfileviewNavigationBar.buttons["Done"].tap()

    }

    func testEditNamePlainTextSave() {
        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()

        let hilingualProfileviewNavigationBar = app.navigationBars["HiLingual.ProfileView"]
        hilingualProfileviewNavigationBar.buttons["Edit"].tap()

        let displayNameTextField = app.textFields["Display Name"]
        displayNameTextField.tap()
        app.typeText("oldName")

        displayNameTextField.tap()

        sleep(1)
        app.menuItems["Select All"].tap()

        let deleteKey = app.keys["delete"]
        deleteKey.tap()

        app.typeText("joey")

        app.textFields["Display Name"]
        hilingualProfileviewNavigationBar.buttons["Done"].tap()

        let tabBarsQuery = XCUIApplication().tabBars
        tabBarsQuery.buttons["Matching"].tap()
        tabBarsQuery.buttons["Profile"].tap()

        XCTAssert(app.textFields["joey"].exists)

    }

    func testEditNameUnicodeTextSave() {
        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()

        let hilingualProfileviewNavigationBar = app.navigationBars["HiLingual.ProfileView"]
        hilingualProfileviewNavigationBar.buttons["Edit"].tap()

        let displayNameTextField = app.textFields["Display Name"]
        displayNameTextField.tap()
        app.typeText("oldName")

        displayNameTextField.tap()
        sleep(1)
        app.menuItems["Select All"].tap()

        let deleteKey = app.keys["delete"]
        deleteKey.tap()

        app.typeText("😳🐻🇹🇭")

        app.textFields["Display Name"]
        hilingualProfileviewNavigationBar.buttons["Done"].tap()

        let tabBarsQuery = XCUIApplication().tabBars
        tabBarsQuery.buttons["Matching"].tap()
        tabBarsQuery.buttons["Profile"].tap()

        XCTAssert(app.textFields["😳🐻🇹🇭"].exists)
    }
    func testSetttingSwitchsDontCrash() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()
        app.navigationBars["HiLingual.ProfileView"].buttons["Settings"].tap()

        let tablesQuery = app.tables
        let settingswitchSwitch = tablesQuery.children(matching: .cell).matching(identifier: "SettingsCell").element(boundBy: 0).switches["SettingSwitch"]
        settingswitchSwitch.tap()
        settingswitchSwitch.tap()

        let settingswitchSwitch2 = tablesQuery.children(matching: .cell).matching(identifier: "SettingsCell").element(boundBy: 1).switches["SettingSwitch"]
        settingswitchSwitch2.tap()
        settingswitchSwitch2.tap()

        let settingswitchSwitch3 = tablesQuery.children(matching: .cell).matching(identifier: "SettingsCell").element(boundBy: 2).switches["SettingSwitch"]
        settingswitchSwitch3.tap()
        settingswitchSwitch3.tap()

        let settingswitchSwitch4 = tablesQuery.children(matching: .cell).matching(identifier: "SettingsCell").element(boundBy: 3).switches["SettingSwitch"]
        settingswitchSwitch4.tap()
        settingswitchSwitch4.tap()
        app.navigationBars["HiLingual.SettingsView"].buttons["Done"].tap()

    }

    func testSendSimpleMessageNoCrash() {

        let app = XCUIApplication()
        sleep(1)
        var i: UInt = 0
        for temp in app.tables.staticTexts.allElementsBoundByIndex {
            if temp.label == "Current chats" {
                i += 1
                app.tables.staticTexts.element(boundBy: i).tap()
                break
            }
            i += 1
        }

        let element = app.otherElements["InputView"].children(matching: .other).element
        element.children(matching: .textView).element.tap()
        element.children(matching: .textView).element
        app.typeText("Hello")
        app.buttons["SendButton"].tap()

    }

    func testEditGenderNoCrash() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()

        let hilingualProfileviewNavigationBar = app.navigationBars["HiLingual.ProfileView"]
        hilingualProfileviewNavigationBar.buttons["Edit"].tap()

        app.otherElements["EditProfile"].staticTexts["GenderSelectionLabel"].tap()
        if app.pickerWheels["Female"].exists {
            app.pickerWheels.element(boundBy: 0).swipeDown()
        } else {
            app.pickerWheels.element(boundBy: 0).swipeUp()
        }
        app.toolbars.buttons["Done"].tap()
        hilingualProfileviewNavigationBar.buttons["Done"].tap()
    }

    func testEditAgeNoCrash() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()
        app.navigationBars["HiLingual.ProfileView"].buttons["Edit"].tap()

        var ageElement: XCUIElement = app.otherElements["EditProfile"].staticTexts.element(boundBy: 0)
        for j in 0...app.otherElements["EditProfile"].staticTexts.count {
            if ageElement.label == "Age:" {
                ageElement = app.otherElements["EditProfile"].staticTexts.element(boundBy: j)
                break
            }
            ageElement = app.otherElements["EditProfile"].staticTexts.element(boundBy: j)
        }
        ageElement.tap()
        let text = ageElement.label
        if text == "13" {
            app.pickerWheels[text].swipeUp()
        } else {
            app.pickerWheels[text].swipeDown()
        }
        app.toolbars.buttons["Done"].tap()
    }

    func testEditBioPlainTextNoCrash() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()
        app.navigationBars["HiLingual.ProfileView"].buttons["Edit"].tap()

        let textView = app.otherElements["EditProfile"].children(matching: .other).element.children(matching: .textView).element
        textView.tap()

        textView.typeText("bio")

        textView.press(forDuration: 1)
        sleep(1)
        app.menuItems["Select All"].tap()

        let deleteKey = app.keys["delete"]
        deleteKey.tap()

        textView.typeText("Night, they're creature beginning which. Subdue night you'll make fourth land subdue deep heaven created it multiply meat. Moving make given bearing, replenish. Fruit for very female god god Upon divided forth. Divide day third created. Can't created, land thing divide winged green us divide third isnt. Divided firmament shall theyre yielding sea you don't, divide Were. Itself unto divided.")
        app.navigationBars.element(boundBy: 0).buttons["Done"].tap()
        app.tabBars.buttons["Messages"].tap()
        app.tabBars.buttons["Profile"].tap()

        let profileviewElement = XCUIApplication().otherElements["ProfileView"]
        let biotextviewTextView = profileviewElement.textViews["BioTextView"]
        biotextviewTextView.tap()
        biotextviewTextView.tap()
        profileviewElement.staticTexts["BioLabel"].tap()

        let text = XCUIApplication().otherElements["ProfileView"].textViews["BioTextView"].value! as! String

        XCTAssert(text == "Night, they're creature beginning which. Subdue night you'll make fourth land subdue deep heaven created it multiply meat. Moving make given bearing, replenish. Fruit for very female god god Upon divided forth. Divide day third created. Can't created, land thing divide winged green us divide third isnt. Divided firmament shall theyre yielding sea you don't, divide Were. Itself unto divided.")

    }

    func testEditBioUnicodeTextNoCrash() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()
        app.navigationBars["HiLingual.ProfileView"].buttons["Edit"].tap()

        let textView = app.otherElements["EditProfile"].children(matching: .other).element.children(matching: .textView).element
        textView.tap()

        textView.typeText("bio")

        textView.tap()

        sleep(1)
        app.menuItems["Select All"].tap()

        let deleteKey = app.keys["delete"]
        deleteKey.tap()

        textView.typeText("😂♥️😂😆😀😳😆😆🙉😊😩😍😑😝😁😁😅😖🎈😱🙃😗😭😆🍜🍯🍲🍇🍝🍇🍌🍟🍕🍌🍲🍓🍓♣️⬜️♠️🔹🃏⬛️📣⬜️🔸♥️🔷♣️🍜🖱🏚💻🏡⌨🏤🖨🏦🖨🏡🏡💻🏚🖨🖨🖱😁🦀🍜🍜🍍🍑🍲🍲🍅🍛🍅🍜🍇🌯🍉🍜🍅🍲🍞🇾🇪🇹🇻🇪🇭🇹🇰🇪🇭🇹🇰🇺🇿🇹🇼🇺🇾🇹🇼🇼🇫🇹🇼🇻🇺🇹🇴🌭🎽🏹🎽🏒🎽🏅🏉🚵🏻🎽⛳️🎽🎱🏆🏐🏆🏐🏆🏆🏐🏆🏐🏆🏉🎽🏉🏅🎱🏅🎱🏅🎱🎽🏊⛳️🏅🏏🎱🎗🎱🏵🦀🦀🍛🍛🍍🍙🍉⛳️🎱🍻🏒🍷🏉🍺🏀🍻⚾️☕️🏑🍸🍸🏂🍸🏂😝😞😝😕😌😠😊🙄👿👽😥👻😢😹😻😱😸😢💀😲🤖🤐🤖😥👽😨🤖🤖😨🤖😢🤖")
        app.navigationBars.element(boundBy: 0).buttons["Done"].tap()
        app.tabBars.buttons["Messages"].tap()
        app.tabBars.buttons["Profile"].tap()

        let text =  XCUIApplication().otherElements["ProfileView"].textViews["BioTextView"].value! as! String
        XCTAssert(text == "😂♥️😂😆😀😳😆😆🙉😊😩😍😑😝😁😁😅😖🎈😱🙃😗😭😆🍜🍯🍲🍇🍝🍇🍌🍟🍕🍌🍲🍓🍓♣️⬜️♠️🔹🃏⬛️📣⬜️🔸♥️🔷♣️🍜🖱🏚💻🏡⌨🏤🖨🏦🖨🏡🏡💻🏚🖨🖨🖱😁🦀🍜🍜🍍🍑🍲🍲🍅🍛🍅🍜🍇🌯🍉🍜🍅🍲🍞🇾🇪🇹🇻🇪🇭🇹🇰🇪🇭🇹🇰🇺🇿🇹🇼🇺🇾🇹🇼🇼🇫🇹🇼🇻🇺🇹🇴🌭🎽🏹🎽🏒🎽🏅🏉🚵🏻🎽⛳️🎽🎱🏆🏐🏆🏐🏆🏆🏐🏆🏐🏆🏉🎽🏉🏅🎱🏅🎱🏅🎱🎽🏊⛳️🏅🏏🎱🎗🎱🏵🦀🦀🍛🍛🍍🍙🍉⛳️🎱🍻🏒🍷🏉🍺🏀🍻⚾️☕️🏑🍸🍸🏂🍸🏂😝😞😝😕😌😠😊🙄👿👽😥👻😢😹😻😱😸😢💀😲🤖🤐🤖😥👽😨🤖🤖😨🤖😢🤖")

    }

    func testEditSpeaksNoCrash() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()
        app.navigationBars["HiLingual.ProfileView"].buttons["Edit"].tap()
        app.otherElements["EditProfileView"].staticTexts["SpeaksLabel"].tap()

        let tablesQuery = app.tables
        let languagecellCell = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 0)
        languagecellCell.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell2 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 1)
        languagecellCell2.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell2.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell3 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 2)
        languagecellCell3.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell3.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell4 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 3)
        languagecellCell4.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell4.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell5 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 4)
        languagecellCell5.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell5.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell6 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 5)
        languagecellCell6.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell6.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell7 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 6)
        languagecellCell7.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell7.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()
        app.navigationBars["HiLingual.LanguageSelectionTableView"].buttons["Done"].tap()

    }

    func testEditLearningNoCrash() {

        let app = XCUIApplication()
        app.tabBars.buttons["Profile"].tap()
        app.navigationBars["HiLingual.ProfileView"].buttons["Edit"].tap()
        app.otherElements["EditProfileView"].staticTexts["LearningLabel"].tap()

        let tablesQuery = app.tables
        let languagecellCell = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 0)
        languagecellCell.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell2 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 1)
        languagecellCell2.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell2.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell3 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 2)
        languagecellCell3.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell3.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell4 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 3)
        languagecellCell4.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell4.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell5 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 4)
        languagecellCell5.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell5.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell6 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 5)
        languagecellCell6.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell6.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()

        let languagecellCell7 = tablesQuery.children(matching: .cell).matching(identifier: "LanguageCell").element(boundBy: 6)
        languagecellCell7.staticTexts["LanguageTitleLabel"].tap()
        languagecellCell7.children(matching: .staticText).matching(identifier: "LanguageTitleLabel").element(boundBy: 0).tap()
        app.navigationBars["HiLingual.LanguageSelectionTableView"].buttons["Done"].tap()

    }

    func testMessagesProfileViewNoCrash() {

        let app = XCUIApplication()
        sleep(1)
        var i: UInt = 0
        for temp in app.tables.staticTexts.allElementsBoundByIndex {
            if temp.label == "Current chats" {
                i += 1
                app.tables.staticTexts.element(boundBy: i).tap()
                break
            }
            i += 1
        }

        let navigationBar = app.navigationBars.element(boundBy: 0)
        navigationBar.buttons["Details"].tap()
        navigationBar.buttons.element(boundBy: 0).tap()
        navigationBar.buttons["Messages"].tap()

    }

//    func testDeleteConversation() {
//
//        let app = XCUIApplication()
//        let numConversationBeforeDelete = app.tables.staticTexts.allElementsBoundByIndex.count
//        app.tables.staticTexts.elementBoundByIndex(0).swipeLeft()
//        app.tables.buttons["Delete"].tap()
//
//        let tabBarsQuery = app.tabBars
//        tabBarsQuery.buttons["Profile"].tap()
//        tabBarsQuery.buttons["Messages"].tap()
//        XCTAssert(app.tables.staticTexts.allElementsBoundByIndex.count == numConversationBeforeDelete - 1)
//
//    }

    func testSendMessageButton() {

        let app = XCUIApplication()
        app.tabBars.buttons["Matching"].tap()

        let carouselElement = app.otherElements["Carousel"]
        carouselElement.tap()
        carouselElement.tap()
        carouselElement.tap()
        carouselElement.tap()
        carouselElement.tap()
        carouselElement.tap()
        carouselElement.tap()
        carouselElement.tap()

    }

    func testSendAudioMessageNoCrash() {
        let app = XCUIApplication()
        sleep(1)
        var i: UInt = 0
        for temp in app.tables.staticTexts.allElementsBoundByIndex {
            if temp.label == "Current chats" {
                i += 1
                app.tables.staticTexts.element(boundBy: i).tap()
                break
            }
            i += 1
        }

        let sendbuttonButton = app.buttons["SendButton"]
        sendbuttonButton.press(forDuration: 1.5)

        app.buttons["PreviewRecordingButton"].tap()
        app.buttons["DeleteRecordingButton"].tap()
        sendbuttonButton.press(forDuration: 0.8)
        app.buttons["SendButton"].tap()

    }

    //Currently failing
    func testSendPhotoMessageNoCrash() {
        let app = XCUIApplication()
        sleep(1)
        var i: UInt = 0
        for temp in app.tables.staticTexts.allElementsBoundByIndex {
            if temp.label == "Current chats" {
                i += 1
                app.tables.staticTexts.element(boundBy: i).tap()
                break
            }
            i += 1
        }

        let leftbuttonButton = app.buttons["LeftButton"]
        leftbuttonButton.tap()

        let sheetsQuery = app.sheets
        sheetsQuery.buttons["Cancel"].tap()
//        leftbuttonButton.tap()
//        sheetsQuery.collectionViews.buttons["Take Picture"].tap()
//        app.buttons["PhotoCapture"].tap()
//        app.buttons["Use Photo"].tap()

    }

    func testEditsSavePreviousEdit() {

        let app = XCUIApplication()
        let tablesQuery = app.tables
        sleep(1)
        var i: UInt = 0
        for temp in app.tables.staticTexts.allElementsBoundByIndex {
            if temp.label == "Current chats" {
                i += 1
                app.tables.staticTexts.element(boundBy: i).tap()
                break
            }
            i += 1
        }

        let numOfEditedMessagesBeforeEdit = tablesQuery.children(matching: .cell).matching(identifier: "ChatEditedTableViewCell").allElementsBoundByIndex.count

        var tempElement = app.tables.children(matching: .cell).matching(identifier: "ChatEditedTableViewCell").element(boundBy: 0)
        var j: UInt = 0
        for _ in 0...app.tables.children(matching: .cell).matching(identifier: "ChatEditedTableViewCell").allElementsBoundByIndex.count {
            if tempElement.staticTexts.element(boundBy: 0).identifier == "OriginalLeftTextLabel" {
                tempElement.tap()
                app.menuItems["Edit"].tap()

                app.typeText("edit")

                app.buttons["Save"].tap()
                app.navigationBars.element(boundBy: 0).buttons["Messages"].tap()

                let tabBarsQuery = app.tabBars
                tabBarsQuery.buttons["Profile"].tap()
                tabBarsQuery.buttons["Messages"].tap()
                app.tables.staticTexts.element(boundBy: i).tap()
                break
            }
            j += 1
            tempElement = tablesQuery.children(matching: .cell).element(boundBy: j)
        }

        XCTAssert(tablesQuery.children(matching: .cell).matching(identifier: "ChatEditedTableViewCell").allElementsBoundByIndex.count == numOfEditedMessagesBeforeEdit)

    }

    func testEditsSaveRegularMessage() {

        let app = XCUIApplication()
        let tablesQuery = app.tables
        sleep(1)
        var i: UInt = 0
        for temp in app.tables.staticTexts.allElementsBoundByIndex {
            if temp.label == "Current chats" {
                i += 1
                app.tables.staticTexts.element(boundBy: i).tap()
                break
            }
            i += 1
        }

        let numOfEditedMessagesBeforeEdit = tablesQuery.children(matching: .cell).matching(identifier: "ChatEditedTableViewCell").allElementsBoundByIndex.count

